Added messages translations and few comments

--- a/language/en.ini
+++ b/language/en.ini
@@ -1,7 +1,12 @@
 ; Save this in UTF-8
-APPLICATION_TITLE = "Resources"
+
+; General
+APPLICATION_TITLE = "Strong Holds - Zasoby"
 VERSION = 'Version: %s'
 COPYRIGHTS=" <a href="http://www.bestproject.pl/">Best Project</a>"
+
+; Messages
+ACTION_DENIED="Action denied."
 
 ; Setup
 SETUP_HEADER = "Application setup"
