--- a/language/pl.ini
+++ b/language/pl.ini
@@ -1,7 +1,12 @@
 ; Save this in UTF-8
-APPLICATION_TITLE = "Zasoby"
+
+; General
+APPLICATION_TITLE = "Twierdze - Zasoby"
 VERSION = 'Wersja: %s'
 COPYRIGHTS=" <a href="http://www.bestproject.pl/">Best Project</a>"
+
+; Messages
+ACTION_DENIED="Akcja niedozwolona."
 
 ; Setup
 SETUP_HEADER = "Instalacja aplikacji"
